# bachelor-project

./: .gitignore  Cargo.toml  README.md  auction_test_done.txt  fib_temp.txt  fibo temp.txt  parameters.json  temp.txt
Auction/: auction_temp.txt
Auction/src/: lib.rs
Commerce/: Cargo.toml
Commerce/src/: commerce.rs  lib.rs
Fibonacci/: Cargo.toml
Fibonacci/src/: lib.rs
Other/: Multi_assert.rs
Piggybank/: Cargo.toml
Piggybank/src/: lib.rs
open-vote-network/.wasgit/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
open-vote-network/.wasgit/logs/: HEAD
open-vote-network/.wasgit/logs/refs/heads/: concordium_ver_3
open-vote-network/.wasgit/logs/refs/remotes/origin/: HEAD
open-vote-network/.wasgit/objects/pack/: pack-a472afba91cbfbcb2876ad19b95dbc14b090e058.idx  pack-a472afba91cbfbcb2876ad19b95dbc14b090e058.pack
open-vote-network/.wasgit/refs/heads/: concordium_ver_3  main
open-vote-network/voting/: Cargo.toml
open-vote-network/voting/src/: lib.rs  property.rs  types.rs
src/: example_init.json  fibo.rs  lib.rs  piggybank.rs
