[package]
name = "vscode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
concordium-std = "2.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }
#serde = {version = "1.0.136", features = ["derive"] }
#serde_json = "1.0.79"

[profile.release]
lto = true       # makes compilations slower, but the size of the resulting wasm is smaller
opt-level = 'z'  # optimize for size, at the cost of potential speed costs
