[package]
name = "vscode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
crypto = "0.3.0"
bytes32 = "0.1.4-0"
enumiter = "0.1.0"

serde = { version = "1.0" }
concordium-std = {path = "../concordium-rust-smart-contracts-new-contract-state/concordium-std" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
libc = "0.2.123"
#std = "0.1.0"
#serde = {version = "1.0.136", features = ["derive"] }
#serde_json = "1.0.79"
byteorder = "1.3"

[profile.release]
lto = true       # makes compilations slower, but the size of the resulting wasm is smaller
opt-level = 'z'  # optimize for size, at the cost of potential speed costs
