[package]
name = "vscode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concordium-std = {path = "../concordium-rust-smart-contracts-new-contract-state/concordium-std" }
libc = "0.2.123"

[profile.release]
lto = true       # makes compilations slower, but the size of the resulting wasm is smaller
opt-level = 'z'  # optimize for size, at the cost of potential speed costs
